[gd_scene load_steps=15 format=3 uid="uid://dos7awdnrsffg"]

[ext_resource type="Script" path="res://Scripts/shopkeeper.gd" id="1_hif6c"]
[ext_resource type="Texture2D" uid="uid://bc4hy3a880x42" path="res://Assets/penguin.png" id="2_gg7w5"]
[ext_resource type="Texture2D" uid="uid://cq3mywi3e4di0" path="res://Assets/button.png" id="3_odond"]
[ext_resource type="FontFile" uid="uid://b456n2xtiy30l" path="res://Fonts/dogica.ttf" id="4_6jecp"]
[ext_resource type="Texture2D" uid="uid://cqd33jr23vnvu" path="res://Assets/shop/shop_ui.png" id="5_0eobv"]
[ext_resource type="Texture2D" uid="uid://dvjdg7ca306mo" path="res://Assets/shop/shop_item_border.png" id="6_sv6bg"]
[ext_resource type="Texture2D" uid="uid://dwutwpw7cpaow" path="res://Assets/plant_potato/potato_seeds.png" id="7_1fvmi"]
[ext_resource type="Texture2D" uid="uid://btqgy6xe8ntse" path="res://Assets/fire_lamp/fire_lamp.png" id="8_6ohrf"]
[ext_resource type="Texture2D" uid="uid://gggojqd6kdau" path="res://Assets/plant_carrot/carrot_seeds.png" id="8_pm6n0"]
[ext_resource type="Texture2D" uid="uid://wbrxqfu6o4lr" path="res://Assets/plant_tomato/tomato_seeds.png" id="9_l8f3l"]
[ext_resource type="Texture2D" uid="uid://d4cdtnqi14hd6" path="res://Assets/plant_cabbage/cabbage_seeds.png" id="10_agv8q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yhman"]
radius = 105.003
height = 210.006

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e2dgi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tavtk"]

[node name="Shopkeeper" type="Node2D"]
script = ExtResource("1_hif6c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gg7w5")

[node name="Interaction Radius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Radius"]
position = Vector2(40, 1)
rotation = -1.57431
shape = SubResource("CapsuleShape2D_yhman")

[node name="Interact Button" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-40.13, -18.13)
scale = Vector2(1.69, 1.69)
texture = ExtResource("3_odond")

[node name="RichTextLabel" type="RichTextLabel" parent="Interact Button"]
offset_left = -3.0
offset_top = -3.0
offset_right = 14.0
offset_bottom = 14.0
scale = Vector2(0.365, 0.365)
theme_override_colors/default_color = Color(0.207843, 0.180392, 0.239216, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "F"

[node name="PointLight2D" type="PointLight2D" parent="Interact Button"]
visible = false
texture = ExtResource("3_odond")

[node name="ShopUI" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="ShopUI"]
offset_left = 195.0
offset_top = 73.0
offset_right = 934.0
offset_bottom = 580.0
texture = ExtResource("5_0eobv")

[node name="Button" type="Button" parent="ShopUI"]
show_behind_parent = true
offset_left = 716.0
offset_top = 144.0
offset_right = 744.0
offset_bottom = 167.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_e2dgi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e2dgi")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e2dgi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_e2dgi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e2dgi")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="ShopUI"]
offset_left = 472.0
offset_top = 174.0
offset_right = 748.0
offset_bottom = 477.0
horizontal_scroll_mode = 0

[node name="Container" type="Control" parent="ShopUI/ScrollContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Potato" type="Control" parent="ShopUI/ScrollContainer/Container"]
custom_minimum_size = Vector2(273.855, 510.245)
layout_mode = 2
anchors_preset = 0
offset_right = 273.855
offset_bottom = 510.245

[node name="Border" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Potato"]
position = Vector2(131.25, 46.75)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("6_sv6bg")

[node name="Icon" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Potato"]
position = Vector2(131.25, 44.75)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("7_1fvmi")
offset = Vector2(-32, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/ScrollContainer/Container/Potato"]
layout_mode = 0
offset_left = 100.0
offset_top = 61.0
offset_right = 228.0
offset_bottom = 101.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "3 coins"

[node name="Button" type="Button" parent="ShopUI/ScrollContainer/Container/Potato"]
top_level = true
layout_mode = 0
offset_left = 475.0
offset_top = 182.0
offset_right = 731.0
offset_bottom = 262.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tavtk")
flat = true

[node name="Carrot" type="Control" parent="ShopUI/ScrollContainer/Container"]
custom_minimum_size = Vector2(273.855, 510)
layout_mode = 2
anchors_preset = 0
offset_right = 273.855
offset_bottom = 510.0

[node name="Border" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Carrot"]
position = Vector2(131.25, 48.75)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("6_sv6bg")
offset = Vector2(0, 35)

[node name="Icon" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Carrot"]
position = Vector2(131.25, 47.75)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("8_pm6n0")
offset = Vector2(-32, 36)

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/ScrollContainer/Container/Carrot"]
layout_mode = 0
offset_left = 100.0
offset_top = 160.0
offset_right = 230.0
offset_bottom = 200.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "6 coins"

[node name="Button" type="Button" parent="ShopUI/ScrollContainer/Container/Carrot"]
top_level = true
layout_mode = 0
offset_left = 475.0
offset_top = 280.0
offset_right = 731.0
offset_bottom = 360.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tavtk")
flat = true

[node name="Tomato" type="Control" parent="ShopUI/ScrollContainer/Container"]
custom_minimum_size = Vector2(273.855, 510)
layout_mode = 3
anchors_preset = 0
offset_right = 273.855
offset_bottom = 510.0

[node name="Border" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Tomato"]
position = Vector2(131.25, 150)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("6_sv6bg")
offset = Vector2(0, 35)

[node name="Icon" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Tomato"]
position = Vector2(131.25, 149)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("9_l8f3l")
offset = Vector2(-32, 36)

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/ScrollContainer/Container/Tomato"]
layout_mode = 0
offset_left = 100.0
offset_top = 260.0
offset_right = 263.0
offset_bottom = 300.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "12 coins"

[node name="Button" type="Button" parent="ShopUI/ScrollContainer/Container/Tomato"]
top_level = true
layout_mode = 0
offset_left = 475.0
offset_top = 381.0
offset_right = 731.0
offset_bottom = 461.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tavtk")
flat = true

[node name="Cabbage" type="Control" parent="ShopUI/ScrollContainer/Container"]
custom_minimum_size = Vector2(273.855, 510)
layout_mode = 2
anchors_preset = 0
offset_right = 273.855
offset_bottom = 510.0

[node name="Border" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Cabbage"]
position = Vector2(131.25, 248)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("6_sv6bg")
offset = Vector2(0, 35)

[node name="Icon" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Cabbage"]
position = Vector2(131.25, 247)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("10_agv8q")
offset = Vector2(-32, 36)

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/ScrollContainer/Container/Cabbage"]
layout_mode = 0
offset_left = 100.0
offset_top = 358.0
offset_right = 263.0
offset_bottom = 398.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "20 coins"

[node name="Button" type="Button" parent="ShopUI/ScrollContainer/Container/Cabbage"]
top_level = true
layout_mode = 0
offset_left = 475.0
offset_top = 479.0
offset_right = 731.0
offset_bottom = 559.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tavtk")
flat = true

[node name="Lamp" type="Control" parent="ShopUI/ScrollContainer/Container"]
custom_minimum_size = Vector2(273.855, 510)
layout_mode = 2
anchors_preset = 0
offset_right = 274.0
offset_bottom = 510.0

[node name="Border" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Lamp"]
position = Vector2(131.25, 348)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("6_sv6bg")
offset = Vector2(0, 35)

[node name="Icon" type="Sprite2D" parent="ShopUI/ScrollContainer/Container/Lamp"]
position = Vector2(131.25, 346)
scale = Vector2(2.76562, 2.76562)
texture = ExtResource("8_6ohrf")
offset = Vector2(-32, 36)

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/ScrollContainer/Container/Lamp"]
layout_mode = 0
offset_left = 100.0
offset_top = 459.0
offset_right = 263.0
offset_bottom = 499.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_6jecp")
text = "100 coins"

[node name="Button" type="Button" parent="ShopUI/ScrollContainer/Container/Lamp"]
top_level = true
layout_mode = 0
offset_left = 475.0
offset_top = 580.0
offset_right = 731.0
offset_bottom = 660.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_tavtk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tavtk")
flat = true

[connection signal="body_entered" from="Interaction Radius" to="." method="_on_interaction_radius_body_entered"]
[connection signal="body_exited" from="Interaction Radius" to="." method="_on_interaction_radius_body_exited"]
